responsive navbar and scrolling animation (needs some fixing)?

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Jocelyn Xu</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div className="p-0" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
